--- a/src/main/resources/public/pages/js/tasks.json
+++ b/src/main/resources/public/pages/js/tasks.json
@@ -1,11 +1,11 @@
-[{"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K"},
- {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K"},
- {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K"},
- {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K"},
- {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K"},
- {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K"},
- {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K"},
- {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K"},
- {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K"},
- {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K"}
+[{"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K","f":"任务一"},
+ {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K","f":"任务二"},
+ {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K","f":"任务三"},
+ {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K","f":"任务四"},
+ {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K","f":"任务五"},
+ {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K","f":"任务六"},
+ {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K","f":"任务七"},
+ {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K","f":"任务八"},
+ {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K","f":"任务九"},
+ {"a":"245760 K","b":"14146 K","c":" 231614 K","d":"9304 K","e":"14468 K","f":"任务十"}
 ]
