--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -35,3 +35,8 @@ application.formatted-version=(v${application.version})
 #============================================================================================================
 #服务名
 spring.application.name=api-sea
+#windows保存路径
+spring.application.windows.path=C:\\tmp\\test
+#linux保存路径
+spring.application.linux.path=/tmp/test
+
